--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,3 +55,8 @@ set -g window-status-current-style "bg=default,reverse"
 set -g window-status-separator ''  # No spaces between windows in the status bar.
 set -g window-status-format "#{?window_start_flag,, }#I:#W#{?window_flags,#F, } "
 set -g window-status-current-format "#{?window_start_flag,, }#I:#W#{?window_flags,#F, } "
+
+#Clipboard
+# Use xclip to copy and paste with the system clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clip"
+bind C-v run "tmux set-buffer $(xclip -o -sel clip); tmux paste-buffer"
